# notifyxsoverlay

./: .gitignore  AGENTS.md  LICENSE  README.dev.md  README.md  pyproject.toml
src/notifyxoverlay/: cli.py
src/notifyxsoverlay/: __init__.py  app.py  bridge.py  cli.py  config.py  log.py
tests/: test_app.py  test_bridge.py  test_cli.py  test_config.py
