[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "notifyxoverlay"
version = "0.1.0"
description = "Bridge Windows notifications to XSOverlay with app-based filtering."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "openvr",
]

[project.scripts]
notifyxoverlay = "notifyxoverlay.cli:main"

[tool.hatchling.build.targets.wheel]
packages = ["src/notifyxoverlay"]

[tool.hatchling.build.targets.sdist]
include = ["src/notifyxoverlay", "README.md", "pyproject.toml"]
