[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "notifyxsoverlay"
version = "0.1.0"
description = "Bridge Windows notifications to XSOverlay with app-based filtering."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "openvr",
  "websockets>=12.0",
  "winrt-Windows.Foundation; platform_system == \"Windows\"",
  "winrt-Windows.Foundation.Collections; platform_system == \"Windows\"",
  "winrt-Windows.Foundation.Metadata; platform_system == \"Windows\"",
  "winrt-Windows.ApplicationModel; platform_system == \"Windows\"",
  "winrt-Windows.UI.Notifications; platform_system == \"Windows\"",
  "winrt-Windows.UI.Notifications.Management; platform_system == \"Windows\"",
]

[project.scripts]
notifyxsoverlay = "notifyxsoverlay.cli:main"

[tool.hatchling.build.targets.wheel]
packages = ["src/notifyxsoverlay"]

[tool.hatchling.build.targets.sdist]
include = ["src/notifyxsoverlay", "README.md", "pyproject.toml"]
